--- a/SITE/src/main/resources/templates/student_welcome.html
+++ b/SITE/src/main/resources/templates/student_welcome.html
@@ -88,29 +88,16 @@
               >
                 <i class="fas fa-tasks fa-lg"></i>
               </div>
-              <h5 class="card-title mb-3">My Projects</h5>
+              <h5 class="card-title mb-3">View My Project</h5>
               <p class="card-text text-secondary mb-4">
-                Track your current projects and applications
+                Track your current project details
               </p>
-              <a href="#" class="btn btn-success w-100"> View Activities </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12 col-lg-4">
-          <div class="card dashboard-card h-100 shadow-sm">
-            <div class="card-body text-center p-4">
-              <div
-                class="icon-wrapper bg-info text-white rounded-circle mb-3 mx-auto"
-                style="width: 60px; height: 60px; line-height: 60px"
+              <a
+                th:href="@{/student/assignments}"
+                class="btn btn-success w-100"
               >
-                <i class="fas fa-user-circle fa-lg"></i>
-              </div>
-              <h5 class="card-title mb-3">Profile Settings</h5>
-              <p class="card-text text-secondary mb-4">
-                Update your personal information and preferences
-              </p>
-              <a href="#" class="btn btn-info w-100"> Manage Profile </a>
+                View Assignments
+              </a>
             </div>
           </div>
         </div>
