--- a/SITE/src/main/resources/templates/student_projects.html
+++ b/SITE/src/main/resources/templates/student_projects.html
@@ -20,26 +20,21 @@
   </head>
   <body>
     <div class="container my-4">
-      <header
-        class="d-flex justify-content-between align-items-center mb-4 header"
-      >
+
+      <header class="d-flex justify-content-between align-items-center mb-4 header">
         <div class="d-flex align-items-center">
-          <img
-            src="/images/ada_logo.png"
-            alt="University Logo"
-            class="logo me-3"
-          />
-          <h4 class="mb-0 fw-normal">
+          <img src="/images/ada_logo.png" alt="University Logo" class="logo me-3" />
+          <h4 class="mb-0 fw-normal text-white">
             Student Portal:
-            <span
-              th:text="${studentName}"
-              class="fw-semibold text-primary"
-            ></span>
+            <span th:text="${studentName}" class="fw-semibold"></span>
           </h4>
         </div>
         <nav>
-          <a th:href="@{/student/welcome}" class="btn btn-outline-primary">
-            <i class="fas fa-arrow-left me-2"></i>Home
+          <a th:href="@{/student/assignments}" class="btn btn-outline-light me-2">
+            <i class="fas fa-chart-line ms-2"></i>View My Assignment
+          </a>
+          <a href="/logout" class="btn btn-danger ms-2">
+            <i class="fas fa-sign-out-alt me-1"></i>Logout
           </a>
         </nav>
       </header>
