--- a/SITE/src/main/resources/templates/staff_projects.html
+++ b/SITE/src/main/resources/templates/staff_projects.html
@@ -51,7 +51,7 @@
   </header>
 
   <div class="mt-4 d-flex justify-content-between align-items-center">
-    <h3 class="h4 fw-semibold text-dark mb-0">Managed Research Projects</h3>
+    <h3 class="h4 fw-semibold text-dark mb-0">Manage Research Projects</h3>
     <button
             onclick="location.href='/staff/projects/new'"
             class="btn btn-ada"
@@ -117,15 +117,23 @@
                 <i class="fas fa-users me-2"></i>Applicants
               </a>
               <div class="action-buttons">
-                <a th:if="${project.status == T(az.edu.ada.SITE.Entity.Project.Status).OPEN}"
+                <a th:if="${project.supervisor != null and project.supervisor.id == staffId}"
                    th:href="@{'/staff/projects/edit/' + ${project.id}}"
                    class="btn btn-outline-primary btn-sm">
                   <i class="fas fa-edit"></i>
                 </a>
-                <a th:href="@{'/staff/projects/delete/' + ${project.id}}"
+              
+                <a th:if="${project.supervisor != null and project.supervisor.id == staffId}"
+                   th:href="@{'/staff/projects/delete/' + ${project.id}}"
                    class="btn btn-outline-danger btn-sm"
                    onclick="return confirm('Confirm project deletion?')">
                   <i class="fas fa-trash-alt"></i>
+                </a>
+              
+                <a th:if="${project.supervisor == null or project.supervisor.id != staffId}"
+                   class="btn btn-outline-secondary btn-sm disabled" 
+                   href="javascript:void(0)">
+                  <i class="fas fa-ban"></i> No Permission
                 </a>
               </div>
             </div>
