--- a/SITE/src/main/resources/static/css/edit_project.css
+++ b/SITE/src/main/resources/static/css/edit_project.css
@@ -1,7 +1,3 @@
-.gradient-header {
-  background: linear-gradient(45deg, #4b6cb7, #182848);
-  color: white;
-}
 .form-label {
   color: #2c3e50;
   font-weight: 600;
@@ -19,3 +15,19 @@
 .checkbox-group label {
   margin-right: 15px;
 }
+
+.header {
+        background-color: #1a5276;
+        padding: 1.5rem 2rem;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+.logo {
+  height: 50px;
+  filter: brightness(0) invert(1);
+}
+
+.header h4 {
+        font-size: 1.2rem;
+    }
