--- a/SITE/src/main/resources/templates/edit_project.html
+++ b/SITE/src/main/resources/templates/edit_project.html
@@ -12,19 +12,39 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="/css/edit_project.css" />
   </head>
   <body class="bg-light">
     <div class="container mt-4 mb-5">
       <header
-        class="d-flex justify-content-between align-items-center p-4 rounded shadow-sm mb-4 gradient-header"
+        class="d-flex justify-content-between align-items-center mb-4 header"
       >
-        <h4 class="mb-0">
-          <i class="bi bi-pencil-square me-2"></i>Edit Project
-        </h4>
+        <div class="d-flex align-items-center">
+          <img
+                  src="/images/ada_logo.png"
+                  alt="University Logo"
+                  class="logo me-3"
+          />
+          <h4 class="mb-0 fw-normal text-white">
+            <i class="bi bi-pencil-square me-2"></i>Edit Project
+          </h4>
+        </div>
+
         <nav>
-          <a th:href="@{/staff/projects}" class="btn btn-outline-light">
-            <i class="bi bi-arrow-left-circle me-2"></i>Back to Projects
+          <a th:href="@{/staff/projects}" class="btn btn-outline-light btn-sm py-1 py-md-2">
+            <i class="bi bi-arrow-left-circle me-2"></i>
+            <span class="d-none d-md-inline">Go Back</span>
+          </a>
+
+          <a th:href="@{/logout}"
+             class="btn btn-danger btn-sm py-1 py-md-2">
+            <i class="fas fa-sign-out-alt d-inline d-md-none"></i>
+            <span class="d-none d-md-inline">Logout</span>
+            <i class="fas fa-sign-out-alt ms-2 d-none d-md-inline"></i>
           </a>
         </nav>
       </header>
