--- a/SITE/src/main/resources/templates/project_student_management.html
+++ b/SITE/src/main/resources/templates/project_student_management.html
@@ -10,26 +10,43 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="/css/project_student_management.css" />
   </head>
   <body>
     <div class="container mt-4">
-      <header class="d-flex justify-content-between align-items-center header">
-        <div class="d-flex align-items-center">
-          <img
-            src="/images/ada_logo.png"
-            alt="ADA University Logo"
-            class="logo"
-          />
-          <h4 class="mb-0 text-dark" th:text="${project.title}">
-            Project Title
-          </h4>
+      <header class="d-flex justify-content-between align-items-center mb-4 header">
+        <div class="container-fluid">
+          <div class="d-flex flex-wrap justify-content-between align-items-center py-2">
+            <div class="d-flex align-items-center">
+              <img src="/images/ada_logo.png"
+                   alt="University Logo"
+                   class="logo me-3"
+              >
+              <h4 class="mb-0 fw-normal text-white m-0">
+                <span class="d-none d-sm-inline">Title: </span>
+                <span th:text="${project.title}" class="fw-semibold ms-1"></span>
+              </h4>
+            </div>
+
+            <nav class="d-flex flex-wrap gap-2 mt-2 mt-md-0">
+              <a th:href="@{'/staff/student-management'}" class="btn btn-outline-light btn-sm py-1 py-md-2">
+                <i class="bi bi-arrow-left-circle me-2"></i>
+                <span class="d-none d-md-inline">Go Back</span>
+              </a>
+
+              <a th:href="@{/logout}"
+                 class="btn btn-danger btn-sm py-1 py-md-2">
+                <i class="fas fa-sign-out-alt d-inline d-md-none"></i>
+                <span class="d-none d-md-inline">Logout</span>
+                <i class="fas fa-sign-out-alt ms-2 d-none d-md-inline"></i>
+              </a>
+            </nav>
+          </div>
         </div>
-        <nav>
-          <a th:href="@{/staff/student-management}" class="btn btn-light">
-            <i class="fas fa-arrow-left me-2"></i>Back to Projects
-          </a>
-        </nav>
       </header>
 
       <div class="management-card">
